# app/Models/diocese_general_data.php
@@ -9,7 +9,7 @@ class diocese_general_data extends Model
     protected $table = 'diocese_general_data';
     protected $primaryKey = 'email';
     protected $fillable = [
-         'email','state','lga', 'addr'
+         'diocese_id','state','lga', 'addr'
     ];
     /*protected $hidden = [
         'password',
